syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Jijin";
option objc_class_prefix = "HLW";

package com.example;

service JijinService {
  rpc send (JijinRequest) returns (JijinReply) {}
  rpc run(JijinReplyTwo) returns (JijinReplyTwo) {}
}

message JijinRequest {
  string name = 1;
}

message JijinReplyTwo {
  string message = 1;
  int32 code = 2;
  bool success = 3;
}

message JijinReply {
  string message = 1;
}